--- a/templates/pagina_web.html
+++ b/templates/pagina_web.html
@@ -183,7 +183,7 @@
     <div id="content">
         <div class="header">
             <button id="newChatButton">+</button>
-            <h2>Asistente <span class="red">&gt;</span>Bantotal</h2>
+            <h2>Asistente <span class="red">&gt;</span>Bantotal - En Mantenimiento</h2>
             <div class="select-container">
                 <select id="versionSelect" onchange="selectVersion()">
                     <option value="2">version 2</option>
